# bcf-sound-documentation

./: .bumpversion.cfg  build.sh  pyproject.toml
docs/: Makefile
docs/source/: changelog.rst  conf.py  index.rst
docs/source/checklists/: main.rst
docs/source/checklists/ppt/: after_service.rst  before_service.rst  during_service.rst
docs/source/checklists/sound/: after_service.rst  before_practice.rst  during_practice.rst  during_service.rst
docs/source/checklists/sound_basic/: before_leaving.rst  before_musicians.rst  before_service_start.rst  during_practice.rst  during_service.rst
docs/source/overview/: powerpoint_outcomes.rst  sound_outcomes.rst
