[tool.poetry]
name = "bcf-sound-documentation"
version = "0.1.0"
description = ""
authors = ["Matthew Cox <mr.mcox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
